--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-popover": "1.0.3",
     "@radix-ui/react-tabs": "^1.0.2",
     "@testing-library/jest-dom": "^5.14.1",
